--- a/GraphConvolutionalNetwork.ipynb
+++ b/GraphConvolutionalNetwork.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Graph Convolutional Neural Network for Chemistry\n",
+    "# Graph Convolutional Network for Chemistry\n",
     "### Sample code:  \n",
     "by iwatobipen  \n",
     "https://iwatobipen.wordpress.com/2019/04/05/make-graph-convolution-model-with-geometric-deep-learning-extension-library-for-pytorch-rdkit-chemoinformatics-pytorch/  \n",
@@ -816,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
